--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**", ".dist/**", "./expo/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**", "build/**", "./expo/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
