--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -47,10 +47,9 @@
     "@nestjs/schedule": "4.1.2",
     "@nestjs/swagger": "8.1.0",
     "@nestjs/typeorm": "10.0.2",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
+    "class-validator": "^0.14.1",
     "dotenv": "16.4.7",
     "helmet": "8.0.0",
     "passport": "0.7.0",
@@ -61,7 +60,7 @@
     "rimraf": "6.0.1",
     "rxjs": "7.8.1",
     "swagger-ui-express": "5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
