--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "prosafe",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
