--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@casl/ability": "6.7.2",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "10.4.15",
     "@nestjs/config": "3.3.0",
     "@nestjs/core": "10.4.15",
@@ -53,6 +54,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "16.4.7",
     "helmet": "8.0.0",
+    "nodemailer": "^7.0.7",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
@@ -77,6 +79,7 @@
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.2",
+    "@types/nodemailer": "^7.0.2",
     "@types/passport": "1.0.17",
     "@types/passport-jwt": "4.0.1",
     "@types/passport-local": "1.0.38",
